[gd_scene format=3 uid="uid://cx1ojiejwf35o"]

[ext_resource type="Script" uid="uid://cwa4eug0l35fv" path="res://Systems/Dice_System/Dice.gd" id="1_kjc4w"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_s2cjt"]
size = Vector2(72, 74)

[node name="Dice" type="Control" unique_id=686019580]
layout_mode = 3
anchors_preset = 0
mouse_filter = 2
script = ExtResource("1_kjc4w")

[node name="Face_Node" type="Control" parent="." unique_id=397719970]
anchors_preset = 0
size_flags_vertical = 4
mouse_filter = 2

[node name="ColorRect" type="ColorRect" parent="Face_Node" unique_id=1545935596]
visible = false
layout_mode = 0
offset_left = -36.0
offset_top = -37.0
offset_right = 36.0
offset_bottom = 37.0
mouse_filter = 2
color = Color(0.9556082, 0.95903677, 0.8316656, 1)

[node name="Face_Sprite" type="Sprite2D" parent="Face_Node" unique_id=690382683]
texture_filter = 1
scale = Vector2(4, 4)

[node name="Dice_Area" type="Area2D" parent="." unique_id=1598485104]
position = Vector2(-1.5, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Dice_Area" unique_id=227894293]
position = Vector2(1.5, -1)
shape = SubResource("RectangleShape2D_s2cjt")

[node name="GreyOut_Rect" type="ColorRect" parent="." unique_id=1171207009]
visible = false
layout_mode = 0
offset_left = -40.0
offset_top = -41.0
offset_right = 40.0
offset_bottom = 41.0
mouse_filter = 2
color = Color(0, 0, 0, 0.45882353)
